methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:24: error: 'while' expected but 'return' found.
  return biscuit
  ^SlugTracking:26: error: '(' expected but '}' found.
} 
^