methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var biscuit:Boolean=false
  do{
    avance()
    poseBrosse()
    leveBrosse()
    recule()
    avance()
    avance()
    if (getColorSol==Color.green)
    if (estSurBiscuit()){
      biscuit=true
    }else {
      recule()
      gauche()
      avance()
    }else{
      recule()
      droite()
      avance()
    }
  }
  return biscuit
    // Write your code here
}